maybe last fiixes

--- a/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
+++ b/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
@@ -449,7 +449,7 @@ Wszystkie animacje użyte w niniejszym projekcie są darmowymi assetami i pochod
 \item[--] atak. 
 \end{itemize}
 
-Przejścia
+Przejścia pomiędzy animacjami są ustawiane z poziomu Blueprintu na podstawie takich zmiennych jak: hasTargetToAttack, isAttacking, isAlive znajdujących się w klasie BP\_BasicUnit
 Na poniższym obrazku widać schemat połączenia animacji z pliku 'RTSUnitAnimBlueprint'.
 
 \includegraphics[scale=0.6]{animGraph.png}
