--- a/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
+++ b/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
@@ -797,7 +797,7 @@ if (Team == ETeam::AI && VisibleUnits.Num() >
 \chapter{Zakończenie}
 \section{Test wydajności silnika}
 
-Zgodnie z testami wydajności na czterordzeniowym procesorze o częstotliwości taktowania 3.5GHz oraz karcie graficznej GeForce GTX 970 gra osiąga stabilny wynik ponad 60 FPS (ang. Frame Per Second - klatek na sekundę) do momonetu stworzenia x jednostek. Wydajność spada jednak drastycznie w momencie, gdy jednostki zaczną się poruszać. Spowodowane jest to zastosowaniem systemu nawigacji dostępnego w silniku, który nie jest przystosowany do gier RTS i dużej ilości jednostek. Aby zachować wydajność na poziomie 30 FPS nie powinno się tworzyć łącznie więcej niż 30 jednostek. Poniższy wykres przedstawia ilość FPS jako funkcję ilości jednostek, z których wszystkie się poruszają. Został on przygotowany na podstawie uruchamiania gry na wymienionym wcześniej urządzeniu. 
+Zgodnie z testami wydajności na czterordzeniowym procesorze o częstotliwości taktowania 3.5GHz oraz karcie graficznej GeForce GTX 970 gra osiąga stabilny wynik ponad 60 FPS (ang. Frame Per Second - klatek na sekundę) do momonetu stworzenia x jednostek. Wydajność spada jednak drastycznie w momencie, gdy jednostki zaczną się poruszać. Spowodowane jest to zastosowaniem systemu nawigacji dostępnego w silniku, który nie jest przystosowany do gier RTS i dużej ilości jednostek. Aby zachować wydajność na poziomie 30 FPS nie powinno się tworzyć łącznie więcej niż 30 jednostek.
 
 \section{Samouczek }
 W rozdziale tym opisane są zasady gry oraz jak wydawać rozkazy swoim jednostkom.
